[package]
name = "silentserver"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoinkernel = "0.0.16"
env_logger = "0.11.6"
log = "0.4.26"
silentpayments = "0.4.0"
crc32fast = "1.4.2"
sled = "0.34.7"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "index_bench"
harness = false
